fix settings component profile pic update spinner not showing in desktop mode

--- a/client/src/components/appLayoutComponents/styles/settingsComponent.module.css
+++ b/client/src/components/appLayoutComponents/styles/settingsComponent.module.css
@@ -11,8 +11,6 @@
     box-sizing: border-box;
 }
 
-
-
 .profilePicSection {
     grid-area: profilePicSection;
     width: 100%;
@@ -110,7 +108,7 @@
     position: relative;
     width: 80%;
     height: 100%;
-    /* border: 1px solid red; */
+    /* border: 1px solid yellow; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -133,22 +131,20 @@
     align-items: center;
     /* border: 2px solid rgb(94, 118, 184); */
     /* border: 2px solid var(--ui-scheme-color); */
-    /* border: 1px solid red; */
+    /* border: 1px solid green; */
 }
 
-.spinner {
+.spinnerClass {
     position: absolute;
-    /* border: 1px solid black; */
+    /* border: 1px solid yellow; */
 }
 
 .profilePicContainer img {
     position: relative;
-    width: 85%;
+    width: 82%;
     aspect-ratio: 1/1;
     border-radius: 50%;
     object-fit: contain;
-    width: 90%;
-    height: 90%;
 }
 
 label {
@@ -158,8 +154,6 @@ label {
     aspect-ratio: 1/1;
     border-radius: 50%;
     object-fit: contain;
-    /* width: 90%; */
-    /* height: 90%; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -174,6 +168,7 @@ label {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    /* border: 1px solid red; */
 }
 
 
@@ -1078,7 +1073,7 @@ label {
     .profilePicContainer {
         position: relative;
         aspect-ratio: 1/1;
-        height: 80%;
+        /* height: 80%; */
         /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
         border-radius: 50%;
         display: flex;
@@ -1087,45 +1082,7 @@ label {
         /* border: 1px solid orange; */
     }
 
-    .spinner {
-        position: absolute;
-        /* border: 1px solid black; */
-    }
 
-    .profilePicContainer img {
-        position: relative;
-        width: 85%;
-        aspect-ratio: 1/1;
-        border-radius: 50%;
-        object-fit: contain;
-        width: 90%;
-        height: 90%;
-    }
-
-    label {
-        position: relative;
-        position: relative;
-        height: 100%;
-        aspect-ratio: 1/1;
-        border-radius: 50%;
-        object-fit: contain;
-        /* width: 90%; */
-        /* height: 90%; */
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        /* border: 1px solid #002A9A; */
-        box-sizing: border-box;
-        -webkit-tap-highlight-color: transparent;
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
 
 
     .imgFileInput {
